<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ijo"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:layout_marginTop="0dp">
            <Button
                android:id="@+id/ButtonHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="HOME"
                android:background="@color/biru"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/ButtonDetail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="WISATA"
                android:background="@color/biru"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/ButtonFasilitas"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="FASILITAS"
                android:background="@color/biru"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/ButtonGaleri"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="GALERI"
                android:background="@color/biru"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/ButtonOpini"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="OPINI"
                android:background="@color/biru"
                android:textStyle="bold"
                android:textColor="@color/putih"
                android:textSize="14sp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/foto1" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textSize="16sp"
            android:text="@string/selamat_datang"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:textSize="14sp"
            android:text="@string/alamat"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:paddingHorizontal="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/b"
                android:scaleType="centerCrop"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/d"
                android:scaleType="centerCrop"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/f"
                android:scaleType="centerCrop"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="MAP"
                android:background="@color/merah"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>